added a thing on conditional merging in julia

--- a/Data Munging/Julia By Example.ipynb
+++ b/Data Munging/Julia By Example.ipynb
@@ -926,7 +926,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.209174 seconds (834.07 k allocations: 43.821 MiB, 99.62% compilation time)\n"
+      "  0.190525 seconds (834.12 k allocations: 43.820 MiB, 99.68% compilation time)\n"
      ]
     },
     {
@@ -990,7 +990,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.143445 seconds (370.22 k allocations: 18.119 MiB, 22.80% gc time, 99.72% compilation time)\n"
+      "  0.098306 seconds (370.27 k allocations: 18.121 MiB, 99.74% compilation time)\n"
      ]
     },
     {
@@ -1043,7 +1043,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.082639 seconds (159.67 k allocations: 8.747 MiB, 99.63% compilation time)\n"
+      "  0.071469 seconds (159.67 k allocations: 8.747 MiB, 99.50% compilation time)\n"
      ]
     },
     {
@@ -1099,7 +1099,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.095871 seconds (455.86 k allocations: 23.344 MiB, 99.63% compilation time)\n"
+      "  0.084675 seconds (455.85 k allocations: 23.343 MiB, 99.34% compilation time)\n"
      ]
     },
     {
@@ -1158,7 +1158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.167747 seconds (533.72 k allocations: 27.179 MiB, 99.48% compilation time)\n"
+      "  0.206541 seconds (533.77 k allocations: 27.184 MiB, 13.27% gc time, 99.64% compilation time)\n"
      ]
     },
     {
@@ -1340,7 +1340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000166 seconds (507 allocations: 39.328 KiB)\n"
+      "  0.000168 seconds (507 allocations: 39.328 KiB)\n"
      ]
     },
     {
@@ -1477,7 +1477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So in the above example we are using an AND statement, it'll keep doing the ANDs across each item there. So if you want to do something fancier like an OR statement you'll need to have that in a function and pass the function in to `@rsubset`:"
+    "So in the above example we are using an AND statement, it'll keep doing the ANDs across each item there. So if you want to do something fancier like an OR statement you'll need to wrap it in parenthesis:"
    ]
   },
   {
@@ -1489,7 +1489,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.106380 seconds (275.40 k allocations: 13.698 MiB, 25.59% gc time, 99.50% compilation time)\n"
+      "  0.134172 seconds (490.13 k allocations: 26.135 MiB, 99.18% compilation time)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"data-frame\"><p>2 rows × 11 columns (omitted printing of 1 columns)</p><table class=\"data-frame\"><thead><tr><th></th><th>Year</th><th>Month</th><th>MEI</th><th>CO2</th><th>CH4</th><th>N2O</th><th>CFC-11</th><th>CFC-12</th><th>TSI</th><th>Aerosols</th></tr><tr><th></th><th title=\"Int64\">Int64</th><th title=\"Int64\">Int64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th></tr></thead><tbody><tr><th>1</th><td>1983</td><td>5</td><td>2.556</td><td>345.96</td><td>1638.59</td><td>303.677</td><td>191.324</td><td>350.113</td><td>1366.1</td><td>0.0863</td></tr><tr><th>2</th><td>1985</td><td>3</td><td>-0.737</td><td>347.66</td><td>1678.34</td><td>305.165</td><td>210.368</td><td>376.004</td><td>1365.66</td><td>0.0141</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ccccccccccc}\n",
+       "\t& Year & Month & MEI & CO2 & CH4 & N2O & CFC-11 & CFC-12 & TSI & Aerosols & \\\\\n",
+       "\t\\hline\n",
+       "\t& Int64 & Int64 & Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & \\\\\n",
+       "\t\\hline\n",
+       "\t1 & 1983 & 5 & 2.556 & 345.96 & 1638.59 & 303.677 & 191.324 & 350.113 & 1366.1 & 0.0863 & $\\dots$ \\\\\n",
+       "\t2 & 1985 & 3 & -0.737 & 347.66 & 1678.34 & 305.165 & 210.368 & 376.004 & 1365.66 & 0.0141 & $\\dots$ \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m2×11 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m Year  \u001b[0m\u001b[1m Month \u001b[0m\u001b[1m MEI     \u001b[0m\u001b[1m CO2     \u001b[0m\u001b[1m CH4     \u001b[0m\u001b[1m N2O     \u001b[0m\u001b[1m CFC-11  \u001b[0m\u001b[1m CFC-12  \u001b[0m\u001b[1m TSI\u001b[0m ⋯\n",
+       "\u001b[1m     \u001b[0m│\u001b[90m Int64 \u001b[0m\u001b[90m Int64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Flo\u001b[0m ⋯\n",
+       "─────┼──────────────────────────────────────────────────────────────────────────\n",
+       "   1 │  1983      5    2.556   345.96  1638.59  303.677  191.324  350.113  136 ⋯\n",
+       "   2 │  1985      3   -0.737   347.66  1678.34  305.165  210.368  376.004  136\n",
+       "\u001b[36m                                                               3 columns omitted\u001b[0m"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@time begin\n",
+    "    @rsubset(df, (:Year<1984 && :Month==5) || (:Year==1985 && :Month==3))\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or you can always pass a custom function too, just like before (this is fast!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000125 seconds (508 allocations: 39.375 KiB)\n"
      ]
     },
     {
@@ -1521,7 +1576,7 @@
        "\u001b[36m                                                               3 columns omitted\u001b[0m"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1654,7 @@
        "   4 │  -0.484    0.0138          348.2"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1706,7 @@
        "   4 │   0.331    0.0352          346.77"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
