clarified that this is animation with plots

--- a/Viz/animations in julia.ipynb
+++ b/Viz/animations in julia.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Animations in Julia\n",
+    "# Animations in Julia with Plots\n",
     "\n",
     "Reference: https://docs.juliaplots.org/latest/animations/"
    ]
